@@ -110,9 +110,10 @@ CloudCmd._loadDir                = function(pLink, pNeedRefresh){
  * @param pEvent
  */
 CloudCmd._editFileName           = function(pParent){
-    var lA = DOM.getCurrentLink(pParent);
+    var lA  = DOM.getCurrentLink(pParent),
+    lName   = DOM.getCurrentName();
     
-    if (lA && lA.textContent !== '..'){
+    if ( lName !== '..' ){
             
             lA.contentEditable = true;
             KeyBinding && KeyBinding.unSet();
@@ -413,7 +414,7 @@ CloudCmd._changeLinks            = function(pPanelID){
         lOnContextMenu_f = function(pEvent){
             var lReturn_b = true;
             
-            KeyBinding.unSet();
+            KeyBinding && KeyBinding.unSet();
             
             /* getting html element
              * currentTarget - DOM event
