@@ -60,9 +60,7 @@ var CloudCommander, Util, DOM, CloudFunc, $;
             }
         }
         else if( Util.isString(pObjectName) ){
-            lObj.name       = pObjectName;
-             
-            lObj.callback   = function(key, opt){
+            lObj = function(key, opt){
                 DOM.getCurrentData(function(pParams){
                     var lObject     = CloudCmd[pObjectName];
                     
