@@ -6,6 +6,7 @@
 
 * Added ability create folders.
 
+* Added filepicker.
 
 2012.03.01, Version 0.1.9
 
